--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,30 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
+    id: build_rederer_image
     dir: 'renderer/'
     args: ['builds', 'submit', '--tag', 'gcr.io/gcp-services-369509/renderer']
+    
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: build_editor_image
+    dir: 'editor/'
+    args: ['builds', 'submit', '--tag', 'gcr.io/gcp-services-369509/editor']
 
-  # - name: 'hashicorp/terraform:0.13.0'
-  #   id : tf_init
-  #   dir: 'editor/'
-  #   args: ['init']
+
+  - name: 'hashicorp/terraform:0.13.0'
+    id : tf_init
+    dir: 'editor/'
+    args: ['init']
+    wait_for: ['build_rederer_image', 'build_editor_image']
   
-  # - name: 'hashicorp/terraform:0.13.0'
-  #   id: tf_plan
-  #   dir: 'editor/'
-  #   args: ['plan']
-  #   wait_for: ['tf_init']
+  - name: 'hashicorp/terraform:0.13.0'
+    id: tf_plan
+    dir: 'editor/'
+    args: ['plan']
+    wait_for: ['tf_init']
   
-  # - name: 'hashicorp/terraform:0.13.0'
-  #   id: tf_apply
-  #   dir: 'editor/'
-  #   args: ['apply', '-auto-approve']
-  #   wait_for: ['tf_plan']
+  - name: 'hashicorp/terraform:0.13.0'
+    id: tf_apply
+    dir: 'editor/'
+    args: ['apply', '-auto-approve']
+    wait_for: ['tf_plan']
   
