--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,19 +10,19 @@ steps:
     args: ['builds', 'submit', '--tag', 'gcr.io/mindful-faculty-369309/editor']
 
 
-  - name: 'hashicorp/terraform:0.13.0'
+  - name: 'hashicorp/terraform'
     id : tf_init
     dir: 'editor/'
     args: ['init']
     wait_for: ['build_rederer_image', 'build_editor_image']
   
-  - name: 'hashicorp/terraform:0.13.0'
+  - name: 'hashicorp/terraform'
     id: tf_plan
     dir: 'editor/'
     args: ['plan']
     wait_for: ['tf_init']
   
-  - name: 'hashicorp/terraform:0.13.0'
+  - name: 'hashicorp/terraform'
     id: tf_apply
     dir: 'editor/'
     args: ['apply', '-auto-approve']
