--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
-steps:
-  - name: 'gcr.io/cloud-builders/gcloud' 
-    id: build_rederer_image
-    dir: 'renderer/'
-    args: ['builds', 'submit', '--tag', 'gcr.io/gcp-services-369509/renderer']
+# steps:
+#   - name: 'gcr.io/cloud-builders/gcloud' 
+#     id: build_rederer_image
+#     dir: 'renderer/'
+#     args: ['builds', 'submit', '--tag', 'gcr.io/gcp-services-369509/renderer']
     
-  - name: 'gcr.io/cloud-builders/gcloud'
-    id: build_editor_image
-    dir: 'editor/'
-    args: ['builds', 'submit', '--tag', 'gcr.io/gcp-services-369509/editor']
+#   - name: 'gcr.io/cloud-builders/gcloud'
+#     id: build_editor_image
+#     dir: 'editor/'
+#     args: ['builds', 'submit', '--tag', 'gcr.io/gcp-services-369509/editor']
 
-
+steps:
   - name: 'hashicorp/terraform'
     id : tf_init
     dir: 'editor/'
@@ -21,10 +21,26 @@ steps:
     action: "Sleep"
     type: "SLEEP"
     trigger_time: "ON_EVERY_EXECUTION"
-    sleep_in_sec: 300
+    sleep_in_sec: 600
   
   - name: 'hashicorp/terraform'
     id: tf_plan
     dir: 'editor/'
     args: ['plan']
     wait_for: ['tf_init']
+
+  
+  # - name: 'hashicorp/terraform'
+  #   id: tf_apply
+  #   dir: 'editor/'
+  #   args: ['apply', '-auto-approve']
+  #   wait_for: ['tf_plan']
+
+  
+  # - name: 'hashicorp/terraform'     
+  #   id: tf_destroy     
+  #   dir: 'editor/'     
+  #   args: ['destroy', '-auto-approve'] 
+  #   wait_for: ['tf_apply']
+   
+    
