--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,7 +14,7 @@ steps:
     id : tf_init
     dir: 'editor/'
     args: ['init']
-    wait_for: ['build_rederer_image', 'build_editor_image']
+    # wait_for: ['build_rederer_image', 'build_editor_image']
     
   - name: 'ubuntu'
     id : sleep
